res/res_rtp_asterisk.c
@@ -3947,15 +3947,15 @@ static void ast_rtp_change_source(struct ast_rtp_instance *instance)
 	if (rtp->lastts) {
 		/* We simply set this bit so that the next packet sent will have the marker bit turned on */
 		ast_set_flag(rtp, FLAG_NEED_MARKER_BIT);
+	}
 
-		ast_debug(3, "Changing ssrc from %u to %u due to a source change\n", rtp->ssrc, ssrc);
+	ast_debug(3, "Changing ssrc from %u to %u due to a source change\n", rtp->ssrc, ssrc);
 
-		if (srtp) {
-			ast_debug(3, "Changing ssrc for SRTP from %u to %u\n", rtp->ssrc, ssrc);
-			res_srtp->change_source(srtp, rtp->ssrc, ssrc);
-			if (rtcp_srtp != srtp) {
-				res_srtp->change_source(rtcp_srtp, rtp->ssrc, ssrc);
-			}
+	if (srtp) {
+		ast_debug(3, "Changing ssrc for SRTP from %u to %u\n", rtp->ssrc, ssrc);
+		res_srtp->change_source(srtp, rtp->ssrc, ssrc);
+		if (rtcp_srtp != srtp) {
+			res_srtp->change_source(rtcp_srtp, rtp->ssrc, ssrc);
 		}
 	}
 
